test/libsolidity/syntaxTests/pragma/broken_version_1.sol
pragma solidity ^0^1;
// ----
// ParserError 5333: (0-21): Source file requires different compiler version (current compiler is ....
